backend/deploy_ingress_controller.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    app: traefik-ingress-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress-lb
  template:
    metadata:
      labels:
        app: traefik-ingress-lb
        name: traefik-ingress-lb
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        ports:
        - name: http
          containerPort: 80
        - name: admin
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik
spec:
  selector:
    app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  externalIPs:
    - 192.168.3.9
    - 10.8.0.1

---
kind: Service
apiVersion: v1
metadata:
  name: traefik-admin-service
  namespace: traefik
spec:
  selector:
    app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: admin

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-admin-ingress
  namespace: traefik
spec:
  rules:
  - http:
      paths:
      - path: /traefik
        backend:
          serviceName: traefik-admin-service
          servicePort: 8080
