backend/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kickerscore

---
apiVersion: v1
kind: Service
metadata:
  name: kickerscore-db-service
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: postgres
spec:
  ports:
    - port: 5432
  selector:
    app: kickerscore
    tier: postgres

---
apiVersion: v1
kind: Service
metadata:
  name: kickerscore-backend-service
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: backend
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: kickerscore
    tier: backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickerscore-db-deployment
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kickerscore
      tier: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kickerscore
        tier: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
        volumeMounts:
          - name: postgres-persistent-storage
            mountPath: /var/lib/postgres
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kickerscore-deployment
  namespace: kickerscore
  labels:
    app: kickerscore
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kickerscore
      tier: backend
  template:
    metadata:
      labels:
        app: kickerscore
        tier: backend
    spec:
      containers:
      - name: kickerscore-backend
        image: 10.8.0.1:30000/sreitsma/kickerscore:latest
        ports:
        - containerPort: 5000

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kickerscore-ingress
  namespace: kickerscore
spec:
  rules:
  - http:
      paths:
      - path: /kickerscore
        backend:
          serviceName: kickerscore-backend-service
          servicePort: 5000
